[IMPL] docsAPI count in transaction controller
