# docs/swagger.yaml
@@ -323,6 +323,25 @@ paths:
       - Bearer: []
       tags:
       - Transaction
+  /transactions/count/{userId}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: Count History Transaction
+        in: path
+        name: userId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+      security:
+      - Bearer: []
+      tags:
+      - Transaction
   /transactions/topUp:
     put:
       consumes:
